# business-operation-tool-api

./: README.md  pyproject.toml
flaskr/: __init__.py  data_service.py  database.py  models.py  schema.py
flaskr/schema/: __init__.py
flaskr/schema/dummy_json/carts/: model.py  queries.py  type.py
flaskr/schema/dummy_json/comments/: model.py  queries.py  type.py
flaskr/schema/dummy_json/posts/: model.py  queries.py  type.py
flaskr/schema/dummy_json/products/: model.py  queries.py  type.py
flaskr/schema/dummy_json/quotes/: model.py  queries.py  type.py
flaskr/schema/dummy_json/todos/: model.py  queries.py  type.py
flaskr/schema/dummy_json/users/: model.py  queries.py  type.py
flaskr/schema/fake_store/carts/: model.py  queries.py  type.py
flaskr/schema/fake_store/products/: model.py  queries.py  type.py
tests/: conftest.py  test_fetch.py  test_schema_dummy_json_cart_resolvers.py  test_schema_dummy_json_comment_resolvers.py  test_schema_dummy_json_post_resolvers.py  test_schema_dummy_json_product_resolvers.py  test_schema_dummy_json_quote_resolvers.py  test_schema_dummy_json_todo_resolvers.py  test_schema_dummy_json_user_resolvers.py  test_schema_fake_store_cart_resolvers.py  test_schema_fake_store_product_resolvers.py  test_schema_fake_store_user_resolvers.py  test_schema_json_placeholder_album_resolvers.py  test_schema_json_placeholder_comment_resolvers.py  test_schema_json_placeholder_photo_resolvers.py  test_schema_json_placeholder_post_resolvers.py  test_schema_json_placeholder_todo_resolvers.py  test_schema_json_placeholder_user_resolvers.py
(+21 files in other folders)
