[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["Takuma Kira <takuma@kirakiraworx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-graphql = "^2.0.1"
graphene-mongo = {url = "https://github.com/graphql-python/graphene-mongo/archive/refs/tags/v0.1.17.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
